--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <!-- ------------------ SCRIPTS ------------------ -->
-    <script src="/controller.js"></script>
-    <script src="/model/rocket.js"></script>
-    <script src="/model/thurster.js"></script>
+    <script src="./controller.js"></script>
+    <script src="./model/rocket.js"></script>
+    <script src="./model/thurster.js"></script>
 </body>
 
 </html>
